# apa_planner

./: CMakeLists.txt  README.MD  package.xml  test.md
functions_common/: Copy_2_of_collision.m  DEFAULTPOLICY2.m  MCTS_init.m  RewardFunction.m  TransforF.m  VA_NN_201126_ver_210124.m  collision.m  collision_old.m  collision_oldmydet.m  collision_triangle.m  collision_update.m  collisiontodo.m  executeEpisode.m  executeEpisode_realangle_in.m  front_to_steer_func.m  hermite_func.m  kinematic_ds.m  kinematic_ds_chuan.m  kinematic_out.m  model.m  plot_E50_env_res.m  plot_E50_env_res_withdetection.m  plot_env.m  plot_final_pose.m  plot_simulation_result.m  polyfit_5th.m  reachTarget.m  steer_to_front.m  stop_judge_special.m  stop_judge_special_taskover.m  tightfig.m  trainNN.m  train_VA_NN_15out.m  train_speed_steer_nn.m
include/: MCTS.h  NN.h  environment.h  path.h  planner.h  tic_toc.h  tmp.cpp  vehicle.h  visualize.h
launch/: run_planner_node.launch
rviz_cfg/: rvizcfg01.rviz
src/: MCTS.cpp  NN.cpp  main.cpp  path.cpp  planner.cpp  vehicle.cpp  visualize.cpp
